Implementation of code for Future, Callable and completable future